feat: agregamos una capa de seguridad para acceder a los recursos
